--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -11,16 +11,18 @@
   </tr>
 
 <% @ideas.each do |idea| %>
-  <tr>
-    <td><%= idea.name %></td>
-    <td><%= idea.description %></td>
-    <td><%= idea.picture %></td>
-    <td><%= link_to 'Show', idea %></td>
-    <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-    <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <div>
+    <p><%= image_tag(idea.picture_url, :width => 100) if idea.picture.present? %></p>
+    <h1><%= idea.name %></h1>
+    <h2><%= idea.description %></h2>
+    <ul>
+      <li><%= link_to 'Show', idea %></li>
+      <li><%= link_to 'Edit', edit_idea_path(idea) %></li>
+      <li><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    </ul>
+  </div>
 <% end %>
-</table>
+
 
 <br />
 
